# purplechef

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/chef_cli/: __init__.py  main.py
demo/: mock-run-after.json  mock-run-before.json  run-demos.sh
detection_kitchen/: pyproject.toml
detection_kitchen/src/chef_detection/: __init__.py  coverage_reporter.py  rule_generator.py  rule_validator.py  sigma_converter.py  sigma_templates.py  test_data_generator.py
docs/: getting-started.md
hardening_kitchen/: pyproject.toml
hardening_kitchen/src/chef_hardening/: __init__.py
infrastructure/terraform/environments/aws-standalone/: main.tf
infrastructure/terraform/modules/caldera-server/: main.tf
infrastructure/terraform/modules/windows-target/: main.tf
pantry/: pyproject.toml
pantry/src/chef_pantry/: __init__.py  audit.py  config.py  errors.py
pantry/src/chef_pantry/clients/: __init__.py  atomic_runner.py  caldera.py  limacharlie.py  llm.py
pantry/src/chef_pantry/mitre/: __init__.py  resolver.py
pantry/src/chef_pantry/models/: __init__.py  emulation.py  evidence.py  recipe.py  technique.py
recipe_book/: pyproject.toml
recipe_book/src/chef_recipes/: __init__.py  demo_runner.py  navigator_import.py  orchestrator.py  recipe_loader.py  webhooks.py
recipe_book/src/chef_recipes/recipes/: _template.yml
tests/: conftest.py
tests/integration/: test_cli_smoke.py  test_navigator_import.py
tests/unit/: test_caldera_client.py  test_coverage_reporter.py  test_models.py  test_recipe_loader.py  test_rule_generator.py  test_rule_validator.py  test_sigma_templates.py  test_test_data_generator.py
(+8 files in other folders)
